--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@ body {
   overflow-x: hidden;
   margin: 0;
   font-family: 'Poppins', sans-serif !important;
+  background: #fff !important;
 }
 
 p{
@@ -383,7 +384,8 @@ p{
     margin-top: 1.5rem;
     padding-left: 20px;
     padding-right: 20px;
-    padding-bottom: 1.9rem;
+    padding-bottom: 2.3rem;
+    padding-top: 2.3rem;
     box-shadow: 3px 3px 25px 2px rgba(158, 153, 153, 0.25);
     border-radius: 15px;
     display: flex;
@@ -428,7 +430,7 @@ p{
     font-size:120%;
   }
   #about-us{
-    background: #FAF6F6;
+    background: #FFF;
     padding-bottom: 8rem;
   }
   .item-box{
