--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,42 @@
+.loader-container{
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  z-index: 4000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+}
+.loader{
+  z-index: 4000;
+  width:50px;
+  height: 50px;
+  border: 5px solid;
+  color: #5498cb;
+  border-top-color: transparent;
+  animation: loader 1.2s linear infinite;
+  border-radius: 50%;
+}
+
+@keyframes loader{
+ 0%{
+   transform: rotate(0deg);
+ }
+  100%{
+   transform:rotate(360deg)
+ }
+}
+
 body {
   overflow-x: hidden;
   margin: 0;
   font-family: 'Poppins', sans-serif !important;
   background: #fff !important;
+}
+.body-overflow{
+  overflow-y: hidden !important;
 }
 
 p{
